fix(tooltip): fix work-break inheritance (#776)
Relates to #774

--- a/packages/base/core/src/less/mixins/tooltip.less
+++ b/packages/base/core/src/less/mixins/tooltip.less
@@ -28,6 +28,7 @@
     font-size: @font-size;
     font-weight: @font-weight;
     white-space: normal;
+    word-break: break-word;
     color: @font-color;
     box-shadow: @box-shadow;
     border: solid @border-width @border-color;
